--- a/state-choropleth.html
+++ b/state-choropleth.html
@@ -17,6 +17,12 @@
 .q6-9 { fill:rgb(33,113,181); }
 .q7-9 { fill:rgb(8,81,156); }
 .q8-9 { fill:rgb(8,48,107); }
+
+#map path:hover {
+  fill: red;
+  fill-opacity: 0.7;
+}
+
  
 </style>
 <h3 id="caption">Hover over a state:</h3>
@@ -82,6 +88,7 @@ function ready(error, us, asthmadata, statenames) {
 	});
   var g = svg.append("g")
 	.attr("class", "states")
+	.attr("id", "map");
   
   updateMap("Response");
 
