--- a/state-choropleth.html
+++ b/state-choropleth.html
@@ -32,4 +32,5 @@
 <script src="http://d3js.org/queue.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v0.min.js"></script>
 <script src="stateprevalence.js"></script>
+<!-- <script src="barchart.js"></script> -->
 </body>
