--- a/asthmamapandchart.html
+++ b/asthmamapandchart.html
@@ -73,7 +73,7 @@ body {
 <script src="asthmamapandchart.js"></script>
 <!-- <script src="barchart.js"></script> -->
   <div class="chart"></div>
-	<div class="dropdown"></div>
+	<div class="dropdown" style="float:right"></div>
 	<div class="map">
 		<h3 id="caption">Hover over a state:</h3>
 	</div>
